tdf#117781: don't remove already applied conditional format data

... when deduplicating; only add new range. Check not to add the
same conditional format to a range more than once.

Change-Id: I0702b8e1462784cc71666ddfa6442a2827f00af5